--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "wilhantianlinebot",
+  "name": "line-bot-6699",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wilhantian/wilhantianlinebot.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wilhantian/wilhantianlinebot/issues"
-  },
-  "homepage": "https://github.com/wilhantian/wilhantianlinebot#readme",
   "dependencies": {
-    "@line/bot-sdk": "^6.7.1",
-    "body-parser": "^1.19.0",
+    "@line/bot-sdk": "^6.8.0",
     "express": "^4.17.1"
   }
 }
