--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@line/bot-sdk": "^6.8.0",
     "express": "^4.17.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "request": "^2.88.0"
   }
 }
