--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "startbg": "pm2 start index.js",
+    "startbg": "pm2 start index.js"
   },
   "author": "",
   "license": "ISC",
