--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "startbg": "pm2 start index.js --name line-bot",
-    "stopbg": "pm2 stop line-bot",
-    "logs": "pm2 logs line-bot"
+    "stopbg": "pm2 stop line-bot && pm2 delete line-bot",
+    "logs": "pm2 logs line-bot "
   },
   "author": "",
   "license": "ISC",
