--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "startbg": "pm2 start index.js --name line-bot",
     "stopbg": "pm2 stop line-bot && pm2 delete line-bot",
+    "watch": "pm2 start index.js --name line-bot --watch",
     "logs": "pm2 logs line-bot "
   },
   "author": "",
